# cognee-secret-santa-agent

./: .env.bak  .env.template  .gitignore  README.md  pyproject.toml
artifacts/: knowledge_graph.html  knowledge_graph_gifts.html  knowledge_graph_participants.html
data/: michael_scott.json  participants.json  participants_with_michael.json
src/secret_santa_agent/: __init__.py  agent.py  build_gift_database.py  build_participant_database.py  debug_logger.py  gradio_app.py
src/secret_santa_agent/data/: gift_catalog.json
src/secret_santa_agent/data/cognee_gifts_db/: export_metadata.json
src/secret_santa_agent/data/cognee_gifts_db/data_storage/: text_03e870fb1579917de6b0bab9dea9f662.txt  text_0b22f5a93cd0b2c0258c20b3b0f7b771.txt  text_16d50ed68f5ec3b0d5a0716d3660fd5c.txt  text_19730f201bac9296e2a1487bf1cbea48.txt  text_25fc1612fbac97aee84379936b96a152.txt  text_2a456261cc5d376017b95fd300d9da1a.txt  text_2ce53b3f18f35da05090e81c3481f7e5.txt  text_333002f392f4bc3c0e11f2c482e3b509.txt  text_35839dac40d91ff31a8189e5248a8846.txt  text_384c7639ab0bbe786078904db5b3beb5.txt  text_3d44a53a8051af575e15f3efe1873665.txt  text_4aa5ae152f14911173e673674d63e8f4.txt  text_4f07f97603cb5e238f18094054ad13dc.txt  text_69757f1b082ebea4c3fb06c6bc02c2e7.txt  text_6d41f2454351fe68d58ed5244a3a832c.txt  text_782274a91230e704d61a16d96bd3eee6.txt  (+11 more)
src/secret_santa_agent/data/cognee_participants_db/: export_metadata.json
src/secret_santa_agent_simple/: agent.py  build_participant_database.py  debug_logger.py  gradio_app.py
tests/: test_agent.py  test_matching.py
(+2344 files in other folders)
